# recipe-app-api

./: Dockerfile
receipe-folder/: pyproject.toml
receipe-folder/docker/: docler-compose.yml
receipe-folder/receipee/: settings.py  urls.py
