[tool.poetry]
name = "receipe"
version = "0.1.0"
description = ""
authors = ["Rajat Arora <arora_rajat@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
